# GenAI

./: README.md  pyproject.toml  pytest.ini  requirements.txt
tests/: __init__.py  test_openai_api.py
